[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/LayerPanel.gd" type="Script" id=1]
[ext_resource path="res://image/UI side/icons/layers/add.png" type="Texture" id=2]
[ext_resource path="res://image/UI side/icons/layers/delete.png" type="Texture" id=3]

[sub_resource type="GDScript" id=2]
script/source = "extends Control

var  list:Array


func updateLines(_list):
	list=_list
	update()

func _draw():
# warning-ignore:integer_division
	for i in list.size()/3:
		var p1 = list[3*i  ]
		var p2 = list[3*i+1]
		var p3 = list[3*i+2]
		draw_line(p1,p2,Color.white,2.0)
		draw_line(p2,p3,Color.white,2.0)
		draw_circle(p2,3,Color.white)
"

[sub_resource type="GDScript" id=1]
script/source = "extends Control



var CursorRect:Rect2
var c:Color=Color(1,1,1,.7)

func updateRect(_rect):
	CursorRect = _rect
	update()


func _draw():
	draw_rect(CursorRect,c)

"

[node name="LayerPanel_2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="upper Edge" type="ColorRect" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 1024.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 20 )
text = "Layer Panel"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 566.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="shield" type="Control" parent="VBoxContainer/ScrollContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )

[node name="floater1" type="Control" parent="VBoxContainer/ScrollContainer/shield"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 748.0
margin_bottom = 431.0
mouse_filter = 2
size_flags_horizontal = 7
size_flags_vertical = 7
script = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="holder" type="Control" parent="VBoxContainer/ScrollContainer/shield"]
margin_right = 40.0
margin_bottom = 40.0

[node name="floater2" type="Control" parent="VBoxContainer/ScrollContainer/shield"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 7
size_flags_vertical = 7
script = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 570.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 30 )

[node name="add" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="delete" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="buttonShield" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[connection signal="resized" from="." to="." method="_on_LayerPanel_2_resized"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/delete" to="." method="_on_delete_pressed"]
